# mlx-training-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs
